# backuper

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  backuper.py  entrypoint.py  pyproject.toml  requirements-dev.txt  setup.py
.cursor/rules/: agents.mdc  git-commits.mdc  git-no-commit-on-main.mdc  github-copilot-pr-review.mdc  implementation.mdc  legacy.mdc  make-targets.mdc  plan-todo-validation.mdc  pull-requests.mdc
.cursor/skills/pr-review-loop/: .gitignore  SKILL.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml
backuper/: __main__.py  argparser.py  backup.py  commands.py  crypto.py  migration.py  utils.py
backuper/cli/: __init__.py  argparser.py
backuper/implementation/: analyze.py  backup.py  cli.py  commands.py  config.py  crypto.py  csv_db.py  filestore.py  migration.py  models.py  utils.py
backuper/implementation/components/: backup_analyzer.py  csv_db.py  file_reader.py  filestore.py  interfaces.py  reporter.py  utils.py
backuper/implementation/controllers/: backup.py  check.py  create_backup.py  restore.py
backuper/implementation/entrypoints/: __init__.py  argparser.py  cli.py  main.py
backuper/implementation/interfaces/: __init__.py
backuper/legacy/: __init__.py
backuper/legacy/cli/: __init__.py  argparser.py  impl_mapping.py
backuper/legacy/implementation/: __init__.py  analyze.py  backup.py  commands.py  csv_db.py  filestore.py  models.py  utils.py
docs/: README.md  csv-migration-contract.md  csv-to-sqlite-migration.md  search-feature-prd.md  source-ignore-rules-assessment.md  source-ignores.md  sqlite-manifest-operations.md  tech-debt-roadmap.md
docs/adr/: 0001-sqlite-manifest-store.md  0002-version-lifecycle-and-transactions.md  0003-version-ordering-and-most-recent.md  0004-migration-created-at-inference.md  0005-sqlite-adapter-contract-and-schema-v1.md  0006-backend-resolution-policy.md  0007-scripts-import-boundaries-lint-enforcement.md  README.md
docs/plans/: README.md  sqlite-only-runtime-milestones.md  sqlite-support-assessment.md  sqlite-support-phase-4-tech-discovery.md  sqlite-support-phase-5-discovery.md
scripts/: __init__.py
scripts/migrate_manifest_csv_to_sqlite/: __init__.py  __main__.py  canonical_parse.py  created_at.py  discovery.py
scripts/migrate_version_csv/: __init__.py  __main__.py  atomic_output.py  blob_meta.py  migrate.py  paths.py
src/backuper/: __main__.py  commands.py  config.py
src/backuper/components/: __init__.py  backup_analyzer.py  csv_db.py  destination_lock.py  file_reader.py  filestore.py  path_ignore.py  reporter.py  sqlite_db.py  utils.py
src/backuper/controllers/: backup.py  check.py  restore.py  verify_integrity.py
src/backuper/entrypoints/: argparser.py  cli.py  cli_runner.py  main.py  wiring.py
src/backuper/interfaces/: __init__.py
src/backuper/models/: __init__.py  exceptions.py
src/backuper/ports/: __init__.py
src/backuper/utils/: __init__.py  gitignore_lines.py  hashing.py  paths.py  zip_payload.py
test/: test_arg_parser.py  test_backup.py  test_crypto.py
test/architecture/: test_boundaries.py
test/aux/: __init__.py  fixtures.py  mock_backup_database.py  mock_file_reader.py
test/implementation/components/: test_backup_analyzer.py  test_csv_backup_database.py  test_local_file_reader.py  test_local_filestore.py  test_reporter.py
test/implementation/controllers/: test_create_backup_controller.py  test_restore_controller.py
test/implementation/entrypoints/: test_argparser.py  test_main.py
test/implementation/integration/: test_check_errors.py  (+7 more)
test/integration/: test_check_errors.py  test_cli_backend_resolution_integration.py  test_cli_user_ignore_integration.py  test_new_integration.py  test_restore.py  test_source_ignore_integration.py  test_update_errors.py  test_update_integration.py  test_verify_integrity_errors.py
test/legacy/: __init__.py  test_backup.py
(+48 files in other folders)
