[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "backuper"
version = "0.3"
description = "Very simple backup utility"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
backuper = "backuper.implementation.entrypoints.main:run_with_args"

[dependency-groups]
dev = [
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.1.0",
  "ruff==0.15.9",
  "import-linter==2.11",
]

[tool.hatch.build.targets.wheel]
packages = ["backuper"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["backuper"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
]
# E501: line length (`ruff format` handles code; long strings/asserts may remain)
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Module-level Union[] aliases (PEP 604 `|` is evaluated at import time on Python <3.10)
"backuper/implementation/components/csv_db.py" = ["UP007"]

[tool.importlinter]
root_packages = ["backuper"]

[[tool.importlinter.contracts]]
name = "Controllers must not import components"
type = "forbidden"
source_modules = ["backuper.implementation.controllers"]
forbidden_modules = ["backuper.implementation.components"]

[[tool.importlinter.contracts]]
name = "Controllers must not import other controller modules"
type = "independence"
modules = ["backuper.implementation.controllers.*"]
