[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "backuper"
version = "0.3"
description = "Very simple backup utility"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pathspec>=0.12.1",
]

[project.scripts]
backuper = "backuper.entrypoints.cli.main:main"

[dependency-groups]
dev = [
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.1.0",
  "ruff==0.15.9",
  "import-linter==2.11",
  "mypy==1.20.0",
]

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
mypy_path = ["src"]
packages = ["backuper"]

[tool.hatch.build.targets.wheel]
packages = ["src/backuper"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src/backuper"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
]
# E501: line length (`ruff format` handles code; long strings/asserts may remain)
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Module-level Union[] aliases (PEP 604 `|` is evaluated at import time on Python <3.10)
"src/backuper/components/csv_db.py" = ["UP007"]

[tool.importlinter]
root_packages = ["backuper"]

[[tool.importlinter.contracts]]
name = "Controllers must not import components"
type = "forbidden"
source_modules = ["backuper.controllers"]
forbidden_modules = ["backuper.components"]

[[tool.importlinter.contracts]]
name = "Controllers must not import other controller modules"
type = "independence"
modules = ["backuper.controllers.*"]

[[tool.importlinter.contracts]]
name = "Utils must not import components"
type = "forbidden"
source_modules = ["backuper.utils"]
forbidden_modules = ["backuper.components"]

[[tool.importlinter.contracts]]
name = "Models must not import components"
type = "forbidden"
source_modules = ["backuper.models"]
forbidden_modules = ["backuper.components"]

[[tool.importlinter.contracts]]
name = "Ports must not import components"
type = "forbidden"
source_modules = ["backuper.ports"]
forbidden_modules = ["backuper.components"]

# Higher layers may import lower layers only (see import-linter "layers" contract).
# `ports` sits above `models`: protocols may use value types in signatures; `models`
# must not import `ports`.
[[tool.importlinter.contracts]]
name = "Ports layer above models"
type = "layers"
layers = [
  "backuper.ports",
  "backuper.models",
]
